--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -10,6 +10,14 @@ footer{
 
 .footer a{
     margin: 0 10px;
-    text-decoration: none;
     color: rgba(0, 0, 255, 0.445);
+}
+
+
+.navbar{
+    background-color: aqua;
+}
+
+.brand-img{
+    max-width: 20px;
 }
