Añadido más contenido a la página principal (Falta arreglar footer y cuadrarlo)

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -25,3 +25,15 @@ footer{
 ul{
     list-style: none;
 }
+
+
+.img-fluid{
+    max-width: 240px;
+}
+
+.same-height-images{
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
+
+}
