--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -37,3 +37,15 @@ ul{
     justify-content: space-between;
 
 }
+
+
+.store-image{
+    max-width: 140px;
+}
+
+.store-show{
+    max-width: 220px;
+}
+
+
+
